@@ -29,6 +29,7 @@ ChangeLog
     * estimated_to_seconds function
     * Added function for check free space of storage
     * Send `Clock-Adjusted: 1` header on clock adjustments
+    * Added free_space attribute for INFO, MEDIUM_INSERTED and FILE_CHANGED events
 
 0.2.0 (2020-12-14)
 
